# mcp-discovery

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile.toml  README.md  dist-workspace.toml  index.html
.github/workflows/: ci.yml  release-pr.yml  release.yml
docs/: README.md  _coverpage.md  _sidebar.md  index.html  quickstart.md
docs/example_template/: sample_txt_template.txt
docs/examples/: capabilities.txt  create-md-plain.md  create-md.md  json.txt  server-info.html  update-md-inline.md  update-md-plain.md  update-md.md
docs/guide/: command-examples.md  helper-functions.md  mcp-discovery-markers.md
src/: cli.rs  error.rs  handler.rs  lib.rs  main.rs  render_template.rs  schema.rs  std_output.rs  templates.rs  types.rs  utils.rs
src/types/: capabilities.rs  commands.rs
templates/common/: title.hbs
templates/html/: html_prompts.hbs  html_resource_templates.hbs  html_resources.hbs  html_summary.hbs  html_template.html  html_tools.hbs
templates/markdown/: markdown_plain_template.md  markdown_template.md  md_plain_prompts.hbs  md_plain_resource_templates.hbs  md_plain_resources.hbs  md_plain_tools.hbs  md_prompts.hbs  md_resource_templates.hbs  md_resources.hbs  md_tools.hbs  summary.hbs
templates/text/: text_prompts.hbs  text_resource_templates.hbs  text_resources.hbs  text_summary.hbs  text_template.txt  text_tools.hbs
tests/: render_template_tests.rs  test_cli.rs  test_std_output.rs
tests/common/: common.rs
tests/fixtures/: cmds.txt  everything-1.0.0.json  md-create.md  md-plain-create.md  md-plain-update-file-prop.md  md-plain-update-inline.md  md-plain-update-template-prop.md  md-plain-update.md  md-update.md  rust-mcp-filesystem.html  txt-create.txt
tests/fixtures/template_files/: html-template.html  md-template.md  txt-template.txt
wix/: main.wxs
