[package]
name = "mcp-discovery"
version = "0.2.5"
authors = ["Ali Hashemi"]
categories = ["command-line-interface", "command-line-utilities"]
description = "A command-line tool written in Rust for discovering and documenting MCP Server capabilities."
repository = "https://github.com/rust-mcp-stack/mcp-discovery"
documentation = "https://docs.rs/mcp-discovery"
keywords = [
    "rust-mcp-stack",
    "mcp-discovery",
    "mcp-cli",
    "rust-mcp-cli",
    "rust-mcp-discovery",
]
homepage = "https://rust-mcp-stack.github.io/mcp-discovery"
license = "MIT"
edition = "2021"
rust-version = "1.80.0"

[lib]
name = "mcp_discovery"
path = "src/lib.rs"

[package.metadata.wix]
upgrade-guid = "F8C005B2-0006-40E0-93CF-01A2DA37CAB7"
path-guid = "FE1B50BA-4553-470C-8819-8575C25AE238"
license = false
eula = false

[package.metadata.docs.rs]
all-features = true # Build with all features

[dependencies]
rust-mcp-sdk = { version = "0.8", default-features = false, features = [
    "client",
    "stdio",
] }

clap = { version = "4.5", features = ["derive"] }
serde = "1.0"
serde_json = "1.0"
tokio = "1.4"
colored = "3.0"
strip-ansi-escapes = "0.2"
unicode-width = "0.2"
async-trait = "0.1"
thiserror = { version = "2.0" }
handlebars = "6.3"
html-escape = "0.2"
regex = "1.1"
path-clean = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }
[dev-dependencies]
tempfile = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
